prevent logo from squishing

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -25,9 +25,11 @@
     @apply text-sm font-medium text-white dark:bg-black/10 bg-white rounded-md;
     @apply bg-opacity-10 hover:bg-opacity-20;
     @apply transition-all duration-200;
-    @apply focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75;
+    @apply focus:outline-none focus-visible:ring-0 focus-visible:ring-white focus-visible:ring-opacity-75;
     @apply px-2 py-2 sm:px-4 sm:py-2;
     @apply text-black/75 dark:text-white/90 dark:hover:text-white;
+
+    * { @apply focus:outline-none focus-visible:ring-0 active:ring-0 }
   }
 
   .call-to-action {
@@ -60,7 +62,7 @@
   .App-menu-items {
     @apply z-10 w-40;
     @apply bg-white/75 backdrop-blur-sm divide-y divide-white/25;
-    @apply rounded-md shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;;
+    @apply rounded-md shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
   }
 
   .App-header {
